Fix flip-card responsiveness on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,7 @@
     } 
    .flip-card{
       margin-top: 50px !important ;
+      height: 40vh;
       
     }
  /*   .img-cover{
